ticket refactoring
